fixed issue (topic not centered)

--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,7 @@ body
 {
 	visibility:hidden;
 	max-height: 0px!important;
+	margin: 0;
 }
 #howcontent,
 #whatcontent
